fortitude/src/rules/modules/snapshots/fortitude__rules__modules__tests__default-public-accessibility_M022.f90.snap
---
source: fortitude/src/rules/modules/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/modules/M022.f90:8:1: M022 module 'bad_module' has default `public` accessibility
   |
 6 | end module good_module
 7 |
 8 | module bad_module
   | ^^^^^^^^^^^^^^^^^ M022
 9 |   ! This is bad
10 |   public
   |
