fortitude/src/rules/modules/snapshots/fortitude__rules__modules__tests__external-function_M001.f90.snap
---
source: fortitude/src/rules/modules/mod.rs
expression: diagnostics
snapshot_kind: text
---
warning: ./resources/test/fixtures/modules/M001.f90:1:1: M001 function not contained within (sub)module or program
  |
1 | integer function double(x)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ M001
2 |   integer, intent(in) :: x
3 |   double = 2 * x
  |

warning: ./resources/test/fixtures/modules/M001.f90:6:1: M001 subroutine not contained within (sub)module or program
  |
4 | end function double
5 | 
6 | subroutine triple(x)
  | ^^^^^^^^^^^^^^^^^^^^ M001
7 |   integer, intent(inout) :: x
8 |   x = 3 * x
  |
