fortitude/src/rules/modules/snapshots/fortitude__rules__modules__tests__missing-intrinsic_M012.f90.snap
---
source: fortitude/src/rules/modules/mod.rs
expression: diagnostics
---
./resources/test/fixtures/modules/M012.f90:2:5: M012 [*] 'use' for intrinsic module missing 'intrinsic' modifier
  |
1 | module my_module
2 |     use iso_fortran_env
  |     ^^^^^^^^^^^^^^^^^^^ M012
3 |     use my_other_module
4 |     use :: iso_fortran_env, only: real32
  |
  = help: Add 'intrinsic'

ℹ Safe fix
1 1 | module my_module
2   |-    use iso_fortran_env
  2 |+    use, intrinsic :: iso_fortran_env
3 3 |     use my_other_module
4 4 |     use :: iso_fortran_env, only: real32
5 5 |     use, intrinsic :: iso_c_binding

./resources/test/fixtures/modules/M012.f90:4:5: M012 [*] 'use' for intrinsic module missing 'intrinsic' modifier
  |
2 |     use iso_fortran_env
3 |     use my_other_module
4 |     use :: iso_fortran_env, only: real32
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ M012
5 |     use, intrinsic :: iso_c_binding
6 |     use, non_intrinsic :: iso_c_binding
  |
  = help: Add 'intrinsic'

ℹ Safe fix
1 1 | module my_module
2 2 |     use iso_fortran_env
3 3 |     use my_other_module
4   |-    use :: iso_fortran_env, only: real32
  4 |+    use, intrinsic :: iso_fortran_env, only: real32
5 5 |     use, intrinsic :: iso_c_binding
6 6 |     use, non_intrinsic :: iso_c_binding
7 7 |     use :: my_other_module
