fortitude/src/rules/modules/snapshots/fortitude__rules__modules__tests__missing-private-statement_M021.f90.snap
---
source: fortitude/src/rules/modules/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/modules/M021.f90:6:1: M021 module 'bad_module' missing 'private' statement
  |
4 | end module good_module
5 |
6 | module bad_module
  | ^^^^^^^^^^^^^^^^^ M021
7 |   ! This is bad
8 | end module bad_module
  |
