fortitude/src/rules/modules/snapshots/fortitude__rules__modules__tests__procedure-not-in-module_M001.f90.snap
---
source: fortitude/src/rules/modules/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/modules/M001.f90:1:1: B041 function not contained within (sub)module or program
  |
1 | integer function double(x)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ B041
2 |   integer, intent(in) :: x
3 |   double = 2 * x
  |

./resources/test/fixtures/modules/M001.f90:6:1: B041 subroutine not contained within (sub)module or program
  |
4 | end function double
5 |
6 | subroutine triple(x)
  | ^^^^^^^^^^^^^^^^^^^^ B041
7 |   integer, intent(inout) :: x
8 |   x = 3 * x
  |
