fortitude/src/rules/modules/snapshots/fortitude__rules__modules__tests__program-with-module_M042.f90.snap
---
source: fortitude/src/rules/modules/mod.rs
expression: diagnostics
---
./resources/test/fixtures/modules/M042.f90:8:1: M042 Program and module in one file, split into their own files
  |
6 | end module mod1
7 |
8 | program main
  | ^^^^^^^^^^^^ M042
9 |     use :: mod1, only: test1
  |
