fortitude/src/rules/modules/snapshots/fortitude__rules__modules__tests__use-all_M011.f90.snap
---
source: fortitude/src/rules/modules/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/modules/M011.f90:3:3: B051 'use' statement missing 'only' clause
  |
1 | module my_module
2 |   use, intrinsic :: iso_fortran_env, only: real32
3 |   use, intrinsic :: iso_c_binding
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ B051
4 | end module my_module
  |
