fortitude/src/rules/modules/snapshots/fortitude__rules__modules__tests__use-intrinsic_M012.f90.snap
---
source: fortitude/src/rules/modules/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/modules/M012.f90:2:5: M012 [*] 'use' for intrinsic module missing 'intrinsic' modifier
  |
1 | module my_module
2 |     use :: iso_fortran_env, only: real32
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ M012
3 |     use, intrinsic :: iso_c_binding
4 |     use, non_intrinsic :: iso_c_binding
  |
  = help: Add 'intrinsic'

ℹ Safe fix
1 1 | module my_module
2   |-    use :: iso_fortran_env, only: real32
  2 |+    use, intrinsic :: iso_fortran_env, only: real32
3 3 |     use, intrinsic :: iso_c_binding
4 4 |     use, non_intrinsic :: iso_c_binding
5 5 |     use :: my_other_module
